Use getFirst instead of get(0)